engine-net-2/examples/Errors/SubgraphErrorCompiled.grg
#include "Rules.grg"

sequence s1
{
	b:boolean=true ;> sub.b
}
